--- a/SaveApp/Base.lproj/Main.storyboard
+++ b/SaveApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="pan-t3-GDf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QHM-aw-6fd">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -321,6 +321,7 @@
                     <navigationItem key="navigationItem" title="SaveApp" id="3cb-rL-kJh"/>
                     <connections>
                         <outlet property="buttonEnter" destination="59d-Ad-QAw" id="UGw-WF-P5C"/>
+                        <outlet property="navigationBar" destination="3cb-rL-kJh" id="qGS-Fy-9NQ"/>
                         <outlet property="welcome" destination="7ka-Ga-Fzf" id="xCl-ck-puI"/>
                     </connections>
                 </viewController>
@@ -363,7 +364,7 @@
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zEW-Ft-r7t">
                                                         <rect key="frame" x="0.0" y="45" width="150" height="30"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                     </textField>
                                                 </subviews>
                                                 <constraints>
@@ -384,6 +385,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
                                                         <connections>
+                                                            <action selector="SignIn:" destination="1NX-OM-EOf" eventType="touchUpInside" id="QwL-t1-I42"/>
                                                             <segue destination="Clt-K5-RI1" kind="show" id="c2F-3E-IQ4"/>
                                                         </connections>
                                                     </button>
@@ -416,6 +418,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="NicknameTextField" destination="HXJ-WQ-BVp" id="CWl-8E-duT"/>
+                        <outlet property="PasswordTextField" destination="zEW-Ft-r7t" id="dsi-xR-CDw"/>
                         <outlet property="logIn" destination="7fT-5N-1Hb" id="l0q-Nv-8Lf"/>
                         <outlet property="signIn" destination="8FY-lW-NzW" id="9Qm-5j-PMn"/>
                         <outlet property="signUp" destination="hj3-ei-uam" id="wKk-4R-4KD"/>
@@ -678,10 +682,15 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="PERSONAL DATA" id="zUF-rP-pjF">
-                        <barButtonItem key="leftBarButtonItem" title="GO OUT" id="m1y-Yc-Zeb"/>
+                        <barButtonItem key="leftBarButtonItem" title="GO OUT" id="m1y-Yc-Zeb">
+                            <connections>
+                                <segue destination="QHM-aw-6fd" kind="show" identifier="LogOutSegue" id="cU1-iE-BaK"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="balanceImage" destination="1t9-Ch-Byu" id="o5j-xp-lrL"/>
+                        <outlet property="balanceTextField" destination="Hia-v3-7oN" id="MR0-Vn-Pc3"/>
                         <outlet property="notificationImage" destination="qsE-Iy-Gu2" id="4id-uN-7Ho"/>
                     </connections>
                 </viewController>
@@ -1023,24 +1032,6 @@
             <point key="canvasLocation" x="6193" y="37"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="ml2-cK-ojh">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pan-t3-GDf" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9G4-Xg-5Jz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="QHM-aw-6fd" kind="relationship" relationship="rootViewController" id="rFS-XT-XQO"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6m2-eE-bTt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="641" y="-1864"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="EVv-uH-Pgf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lbQ-9C-ka6" sceneMemberID="viewController">
@@ -1061,6 +1052,7 @@
         <!--Navigation Controller-->
         <scene sceneID="nGS-3i-I2E">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FrG-PB-p32" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Clt-K5-RI1" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pqe-IX-rRs">
@@ -1072,7 +1064,6 @@
                         <segue destination="Zmw-93-pf3" kind="relationship" relationship="rootViewController" id="5X7-0Z-D9B"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FrG-PB-p32" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2006" y="37"/>
         </scene>
