--- a/SaveApp/Base.lproj/Main.storyboard
+++ b/SaveApp/Base.lproj/Main.storyboard
@@ -364,7 +364,7 @@
                                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zEW-Ft-r7t">
                                                         <rect key="frame" x="0.0" y="45" width="150" height="30"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                                     </textField>
                                                 </subviews>
                                                 <constraints>
@@ -618,7 +618,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="zcg-CS-Jp4">
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="190"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3570559B-A3BA-46C2-9DF1-A213ADF919F4" translatesAutoresizingMaskIntoConstraints="NO" id="qsE-Iy-Gu2">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EAB1478D-D653-48CA-94A8-AEEFAB0B04CD" translatesAutoresizingMaskIntoConstraints="NO" id="qsE-Iy-Gu2">
                                                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="150" id="XhD-VL-ZXp"/>
@@ -1081,7 +1081,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="3570559B-A3BA-46C2-9DF1-A213ADF919F4" width="256" height="256">
+        <image name="DefaultPhoto" width="540" height="540"/>
+        <image name="EAB1478D-D653-48CA-94A8-AEEFAB0B04CD" width="256" height="256">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBMU
 GR4fJSYsLzU4VSRudWxs1QkKCwwNDg8QERJWTlNTaXplViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBz
@@ -1097,15 +1098,14 @@ AZkBoAGoAbUBugG8Ab4BwwHLAc4B0wHbAd4B8AHzAfgAAAAAAAACAQAAAAAAAAA/AAAAAAAAAAAAAAAA
 AAAB+g
 </mutableData>
         </image>
-        <image name="DefaultPhoto" width="540" height="540"/>
         <image name="Gastos" width="310" height="140"/>
         <image name="Image" width="128" height="128"/>
         <image name="Ingresos" width="500" height="521"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="aPM-SY-tGv"/>
-        <segue reference="bkg-09-ntX"/>
+        <segue reference="JGS-Xg-OWa"/>
+        <segue reference="hLJ-Rr-jlQ"/>
         <segue reference="MST-70-fxA"/>
-        <segue reference="wFh-d8-kIj"/>
     </inferredMetricsTieBreakers>
 </document>
